# Algorithms---Data-Structures

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  output.json
.trunk/: trunk.yaml
STD-containers/: array.hpp  deque.hpp  list.hpp
algorithms/: Merge_sort.hpp  compare.cpp  dijsktra.cpp  divide.cpp  luigi.hpp
containers/: AVL_tree.hpp  AVL_tree.md  array.hpp  array_node.hpp  bin_node.hpp  bin_search_node.hpp  bin_search_tree.hpp  bin_search_tree.md  bin_tree.hpp  bin_tree_guide.hpp  circular_forward_sort_list.hpp  deque.hpp  double_linked_list.hpp  forward_list.hpp  forward_node.hpp  forward_sort_list.hpp  hash_table.hpp  list.hpp  minideque.hpp  node.hpp  queue.hpp  sparse_matrix.hpp
data/: data_generator.cpp  data_generator.hpp  limits.cpp  read_data.cpp
examples/: array.cpp  circular_forward_sort_list.cpp  forward_list.cpp  forward_sort_list.cpp  list.cpp  tempCodeRunnerFile.cpp
examples/algorithms/: GD_uniform_distribution__2b-1b.csv  GD_uniform_distribution__2b-2b.csv  GD_uniform_distribution__2b-4b.csv  GD_uniform_distribution__2b-5b.csv  GD_uniform_distribution__2b-7b.csv  GD_uniform_distribution__2b-8b.csv  GD_uniform_distribution__4b-4b.csv  Merge_sort.cpp
examples/containers/: bin_search_tree.cpp  forward_list.cpp  forward_sort_list.cpp  list.cpp  minideque.cpp  sparse_matrix.cpp
mock/: base_forward_sort_list.cpp  bin_tree.cpp  default_random_engine.cpp  limits.cpp  list.cpp  resize.cpp
src/alex/: BUILD.bazel  (+6 more)
src/algorithms/: BUILD.bazel
src/algorithms/dijsktra/: dijsktra.cpp  dijsktra.md  graph.cpp  graph_destructor.cpp  graph_graph_type.cpp  no_leak_graph.cpp  sergio_graph.cpp
src/algorithms/search/: basic_binary_search.hpp  binary_search.hpp  exponential_search.hpp
src/algorithms/sort/: insertion_sort.hpp  merge_sort.hpp  selection_sort.hpp  vector.hpp
src/tests/: BUILD.bazel
src/tests/data/: GD_uniform_distribution__2b-0b.csv  GD_uniform_distribution__2b-10b.csv  GD_uniform_distribution__2b-11b.csv  GD_uniform_distribution__2b-12b.csv  GD_uniform_distribution__2b-13b.csv  GD_uniform_distribution__2b-14b.csv  GD_uniform_distribution__2b-15b.csv  GD_uniform_distribution__2b-17b.csv  GD_uniform_distribution__2b-18b.csv  GD_uniform_distribution__2b-1b.csv  GD_uniform_distribution__2b-3b.csv  GD_uniform_distribution__2b-6b.csv  GD_uniform_distribution__2b-9b.csv  GD_uniform_distribution__500000.csv  GD_uniform_distribution__550000.csv  GD_uniform_distribution__600000.csv  GD_uniform_distribution__650000.csv  data_generator.cpp
src/tests/performance/: alex_merge_sort.cpp  merge_sort.cpp  monolito_alex_merge_sort.cpp  plot.py
src/tests/utils/: BUILD.bazel  vector.hpp
tests/: circular_forward_sort_list.cpp  containers.cpp  forward_list.cpp  forward_sort_list.cpp
(+40 files in other folders)
