# Copyright (C) 2022 José Enrique Vilca Campana
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

# cc_library(
#   name = "fstd",
#   srcs = glob(["**/*.cpp"]),
#   hdrs = glob(["**/*.hpp"]),
#   visibility = ["//visibility:public"],
# )

cc_library(
  name = "lib_merge_sort",
  # srcs = ["sort/merge_sort.cpp"],
  # hdrs = glob(["algorithms/GAAAAAAAAAAAAAH/sort/merge_sort.hpp"]),
  hdrs = ["sort/merge_sort.hpp"],
  # hdrs = ["**/merge_sort.hpp"],
  # hdrs = ["merge_sort.hpp"],
  visibility = ["//visibility:public"],
)
